actualizacion lector qr2